--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,16 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@zeeoneofc",
-	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
+	"ownerNumber": "01032199513",
+	"ownerNumberr": "01032199513",
+	"cr": "@Ki SAMA",
+	"yt":"bit.ly/",
+	"grub": "bit.ly/",
+	"wa": "bit.ly/",
+	"donate": "bit.ly/",
+	"ig": "bit.ly/",
+	"gt": "bit.ly/",	
+	"ownername": "Ki SAMA",
 	"botname":"ΛᄂPΉΛ BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
