--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"prefix": ".",
-	"language":"ind",
+	"language":"en",
 	"ownerNumber": "01032199513",
 	"ownerNumberr": "01032199513",
 	"cr": "@Ki SAMA",
